--- a/src/components/footer/Footer.css
+++ b/src/components/footer/Footer.css
@@ -1,13 +1,18 @@
+.footer {
+  border-top: 1px solid #e9e9e9;
+  background: #f7f7f8;
+}
 .footer_contents {
   display: flex;
-  padding: 100px;
-  gap: 45px;
+  padding: 100px 0;
+  justify-content: center;
 }
 .footer_contents ul {
   list-style-type: none;
   display: flex;
   align-items: start;
   flex-direction: column;
+  gap: 18px !important;
 }
 .footer_contents .p {
   font-size: 14px;
@@ -17,4 +22,61 @@
 }
 .par1 {
   width: 380px;
+  padding-bottom: 12px;
+}
+.footer_contact {
+  display: flex;
+  align-items: center;
+  gap: 10px;
+}
+.p {
+  width: 340px;
+}
+.footer_images {
+  display: flex;
+  align-items: center;
+  gap: 12px;
+}
+.footer_icons {
+  display: flex;
+  align-items: center;
+  gap: 6px;
+  padding: 10px 0;
+}
+.social_media {
+  background: #fff;
+  border: 1px solid #e1dfdf;
+  border-radius: 5px;
+  padding: 9px 8.5px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.input {
+  width: 100%;
+  position: relative;
+}
+.input input {
+  padding: 12px 16px;
+  width: 420px;
+  outline: none;
+  border-radius: 5px;
+  border: 1px solid #e9e9e9;
+}
+.input img {
+  position: absolute;
+  top: 12px;
+  right: 18px;
+}
+.end {
+  text-align: center;
+  border-top: 1px solid #e9e9e9;
+  padding: 20px;
+}
+.end h4 {
+  font-size: 14px;
+  font-weight: 400;
+}
+.end h4 span {
+  color: #f53e32;
 }
