--- a/src/pages/login/Login.css
+++ b/src/pages/login/Login.css
@@ -3,7 +3,7 @@
   flex-direction: column;
   align-items: center;
   gap: 30px;
-  width: 400px;
+  width: 500px;
   padding: 30px;
   border: 1px solid #e9e9e9;
   border-radius: 5px;
@@ -22,7 +22,7 @@
 }
 .email input,
 .password input {
-  width: 100vh;
+  width: 460px;
   padding: 13px;
 }
 .form input {
@@ -34,7 +34,7 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
-  width: 100vh;
+  width: 100%;
 }
 .checkbox {
   display: flex;
